DockerFile: Apache instead of Nginx

--- a/.docker/Viewer-v3.x/default.conf.template
+++ b/.docker/Viewer-v3.x/default.conf.template
@@ -1,20 +1,18 @@
-server {
-  listen ${PORT} default_server;
-  listen [::]:${PORT} default_server;
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
-    add_header Cross-Origin-Opener-Policy same-origin;
-    add_header Cross-Origin-Embedder-Policy require-corp;
-    add_header Cross-Origin-Resource-Policy same-origin;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-  }
-  error_page   500 502 503 504  /50x.html;
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
-}
+<VirtualHost *:${PORT}>
+    DocumentRoot "/usr/local/apache2/htdocs"
+    <Directory "/usr/local/apache2/htdocs">
+        Options Indexes FollowSymLinks
+        AllowOverride None
+        Require all granted
+    </Directory>
+    ErrorDocument 500 /50x.html
+    ErrorDocument 502 /50x.html
+    ErrorDocument 503 /50x.html
+    ErrorDocument 504 /50x.html
+
+    <Location "/">
+        Header set Cross-Origin-Opener-Policy "same-origin"
+        Header set Cross-Origin-Embedder-Policy "require-corp"
+        Header set Cross-Origin-Resource-Policy "same-origin"
+    </Location>
+</VirtualHost>
