--- a/.docker/Viewer-v3.x/default.ssl.conf.template
+++ b/.docker/Viewer-v3.x/default.ssl.conf.template
@@ -1,22 +1,22 @@
-server {
-  listen ${SSL_PORT} ssl http2 default_server;
-  listen [::]:${SSL_PORT} ssl http2 default_server;
-  ssl_certificate /etc/ssl/certs/ssl-certificate.crt;
-  ssl_certificate_key /etc/ssl/private/ssl-private-key.key;
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
-    add_header Cross-Origin-Opener-Policy same-origin;
-    add_header Cross-Origin-Embedder-Policy require-corp;
-    add_header Cross-Origin-Resource-Policy same-origin;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-  }
-  error_page   500 502 503 504  /50x.html;
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
-}
+<VirtualHost *:${SSL_PORT}>
+    DocumentRoot "/usr/local/apache2/htdocs"
+    SSLEngine on
+    SSLCertificateFile /path/to/your/ssl/certificate.crt
+    SSLCertificateKeyFile /path/to/your/ssl/certificate.key
+
+    <Directory "/usr/local/apache2/htdocs">
+        Options Indexes FollowSymLinks
+        AllowOverride None
+        Require all granted
+    </Directory>
+    ErrorDocument 500 /50x.html
+    ErrorDocument 502 /50x.html
+    ErrorDocument 503 /50x.html
+    ErrorDocument 504 /50x.html
+
+    <Location "/">
+        Header set Cross-Origin-Opener-Policy "same-origin"
+        Header set Cross-Origin-Embedder-Policy "require-corp"
+        Header set Cross-Origin-Resource-Policy "same-origin"
+    </Location>
+</VirtualHost>
